--- a/resume.yaml
+++ b/resume.yaml
@@ -1,7 +1,9 @@
 # Paul Kiernan Resume Content
 # vim: set ft=yaml ts=2 sts=2 :
 ---
-name: Paul Kiernan
+name:
+  first: Paul
+  last: Kiernan
 website:  http://paulynomial.com
 email: hi@paulynomial.com
 phone: +1 (646) 369-6726
@@ -17,14 +19,39 @@ education:
 experience:
   - employer-name: Chartbeat Inc.
     employer-website: http://www.chartbeat.com/
-    title: Software Developer
+    title: Backend Developer Team Lead
     period-of-employment:
-      start: !!timestamp 2014-08-01
+      start: !!timestamp 2015-10-01
       end: Present
     details:
+      - Hackweeks:
+        - Team lead on Team Gibson.
+      - Backend Team Lead on Team Life Aquatic developing experimental new
+        products for Chartbeat
+      - Implemented Robust Principal Component Analysis outlier detection for
+        surfacing anomolous traffic patterns in topics published on the
+        Chartbeat network.
+      - Developer real-time targeting platform for distributers like Kargo to
+        use for targeting trending material
+      - Developed benchmarking tool for publishers to measure their share of
+        voice in a topic being currently discussed on the web
       - Ad Refresh Technical Team Lead
-      - Rosetta Stone (DFP translation)
+  - employer-name: Chartbeat Inc.
+    employer-website: http://www.chartbeat.com/
+    title: Backend Developer
+    period-of-employment:
+      start: !!timestamp 2014-08-01
+      end: !!timestamp 2015-10-01
+    details:
+      - Hackweeks:
+        - Team Overtone- clojure programmatic music generation
+        - Team lead on Team Slack. Produced a number of integrations into slack
+          from Salesforce tools, a deployment bot, and a number of fun
+          integrations like a book and song recommendation system.
+        - Geiger Counter
+        - Imgenius, a perceptual hashing system
       - Redshift workers and stuff
+      - Rosetta Stone (DFP translation), opensourced as Parselmouth
       - >
           Teaching non-technical members of the company programming through the
           "Learn Python the Hard Way" online curriculum
@@ -99,13 +126,13 @@ research:
     details:
       - >
           Designed and fabricated the ATxmega128 based power distribution system
-          for Cornell’s operationally responsive, high agility space imaging 
+          for Cornell’s operationally responsive, high agility space imaging
           system codenamed 'Violet'
 
 interests:
   - Music
   - Cooking
-  - Boxing
+  - Rock Climbing
   - Particle Physics
   - Fusion Engineering
   - Miyazaki Films
@@ -116,7 +143,7 @@ links:
       url: https://github.com/paulkiernan
       name: paulkiernan
   - LinkedIn:
-      url: https://www.linkedin.com/pub/paul-kiernan/24/a32/470
+      url: https://www.linkedin.com/in/paulynomial
       name: paulkiernan
   - Twitter:
       url: https://twitter.com/gaelic
